# ebook-renamer

./: CLAUDE.md  CLEANUP_IMPROVEMENT_SUMMARY.md  CLOUD_IMPLEMENTATION_STATUS.md  CLOUD_STORAGE_STRATEGY.md  Cargo.toml  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_GUIDE.md  LOGGING_IMPLEMENTATION_SUMMARY.md  NAMING_IMPROVEMENTS.md  README.md  RENAMING_RULES_ANALYSIS.md  RENAMING_RULES_IMPROVEMENTS.md  TEST_RESULTS_2025-11-21.md  TEST_RESULTS_SUMMARY.md  test_citations.sh  test_logging.sh  todo.md  walkthrough.md
docs/: IMPROVEMENTS_SUMMARY_2025-11-21.md  RENAMING_RULES_REVIEW.md  cleanup_feature.md  formatting_quick_reference.md  formatting_standards.md  spec.md
source_go/: go.mod  go.sum
source_go/cmd/ebook-renamer/: main.go
source_go/internal/cli/: cli.go
source_go/internal/cloud/: cloud.go  dropbox.go  gdrive.go  provider.go
source_go/internal/duplicates/: duplicates.go  duplicates_test.go
source_go/internal/jsonoutput/: jsonoutput.go
source_hs/: README.md  ebook-renamer.cabal
source_hs/.stack-work/: stack.sqlite3
source_hs/app/: Main.hi  Main.hs
source_ml/: README.md  dune-project
source_py/: ebook-renamer.py
source_py/ebook_renamer/: __init__.py  cli.py  duplicates.py  jsonoutput.py  normalizer.py  scanner.py  todo.py  tui.py  types.py
source_py/tests/: test_normalizer.py  test_scanner.py  test_tui.py
source_rb/: README.md  ebook-renamer.rb
source_rb/lib/: normalizer.rb  types.rb
source_rb/test/: test_normalizer.rb
source_zig/: README.md  build.zig
source_zig/src/: main.zig  tui.zig
src/: cleanup.rs  cli.rs  cloud.rs  cloud_storage.rs  download_recovery.rs  duplicates.rs  json_output.rs  main.rs  normalizer.rs  scanner.rs  todo.rs  tui.rs
src/cloud/: dropbox.rs  gdrive.rs  mod.rs
src/cloud_storage/: dropbox.rs  google_drive.rs
test_output/: python_output.json  todo.md
tests/tools/: build_golden_from_rust.py  generate_noise.py  import_from_downloads.py  test_cross_language.sh
(+13 files in other folders)
