[package]
name = "ebook_renamer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
colored = "2.1"
ratatui = "0.29.0"
crossterm = "0.29.0"

[dev-dependencies]
tempfile = "3.8"
